--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <script src="js/script.js"></script>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis tempora ad debitis quo aperiam itaque accusantium nesciunt neque beatae a molestias ut magni inventore dolor, cum, distinctio nam? Quis, in.</p>
 </body>
 </html>
